--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "add-dependencies",
+  "name": "deps-no-install",
   "version": "1.1.0",
   "description": "Add dependencies (latest or specified versions) to the package.json file without installing them",
   "repository": {
